[ckc116] IO structure redefined